--- a/templates/owner/add_homestay.html
+++ b/templates/owner/add_homestay.html
@@ -2,48 +2,48 @@
 {% block title %}Add Homestay{% endblock %}
 
 {% block content %}
-<h2>Add a New Homestay</h2>
+<h2 data-translate="add-a-new-homestay">Add a New Homestay</h2>
 <hr>
 
 <div class="row">
     <div class="col-lg-8 mx-auto">
         <div class="card">
             <div class="card-header">
-                <h4 class="mb-0">Homestay Details</h4>
+                <h4 class="mb-0" data-translate="homestay-details">Homestay Details</h4>
             </div>
             <div class="card-body">
                 <form method="post" enctype="multipart/form-data">
                     <!-- Title -->
                     <div class="mb-3">
-                        <label for="title" class="form-label">Title</label>
+                        <label for="title" class="form-label" data-translate="title">Title</label>
                         <input type="text" class="form-control" id="title" name="title" required>
                     </div>
 
                     <!-- Description -->
                     <div class="mb-3">
-                        <label for="description" class="form-label">Description</label>
+                        <label for="description" class="form-label" data-translate="description">Description</label>
                         <textarea class="form-control" id="description" name="description" rows="4" required></textarea>
                     </div>
 
                     <!-- Address/City/District -->
                     <div class="mb-3">
-                        <label for="address" class="form-label">Address</label>
+                        <label for="address" class="form-label" data-translate="address">Address</label>
                         <input type="text" class="form-control" id="address" name="address" required>
                     </div>
                     <div class="row">
                         <div class="col-md-6 mb-3">
-                            <label for="city" class="form-label">City</label>
+                            <label for="city" class="form-label" data-translate="city">City</label>
                             <input type="text" class="form-control" id="city" name="city" required>
                         </div>
                         <div class="col-md-6 mb-3">
-                            <label for="district" class="form-label">District</label>
+                            <label for="district" class="form-label" data-translate="district">District</label>
                             <input type="text" class="form-control" id="district" name="district" required>
                         </div>
                     </div>
 
                     <!-- Number of Floors -->
                     <div class="mb-3">
-                        <label for="floor_count" class="form-label">Number of Floors</label>
+                        <label for="floor_count" class="form-label" data-translate="number-of-floors">Number of Floors</label>
                         <input 
                             type="number" 
                             class="form-control" 
@@ -57,7 +57,7 @@
 
                     <!-- Image -->
                     <div class="mb-3">
-                        <label for="image" class="form-label">Upload Image</label>
+                        <label for="image" class="form-label" data-translate="upload-image">Upload Image</label>
                         <input 
                             type="file" 
                             class="form-control" 
@@ -67,7 +67,7 @@
                         >
                     </div>
 
-                    <button type="submit" class="btn btn-primary">Add Homestay</button>
+                    <button type="submit" class="btn btn-primary" data-translate="add-homestay">Add Homestay</button>
                 </form>
             </div>
         </div>
